samples/_failures_safe/1761095591_3d4305_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6a2cba3d.c: In function ‘main’:
./samples/SAFE/__tmp_6a2cba3d.c:140:12: error: missing terminating " character
  140 |     printf("Example: 2024-
      |            ^~~~~~~~~~~~~~~
./samples/SAFE/__tmp_6a2cba3d.c:140:5: error: expected expression at end of input
  140 |     printf("Example: 2024-
      |     ^~~~~~
./samples/SAFE/__tmp_6a2cba3d.c:140:5: error: expected declaration or statement at end of input
